[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game_ui/Container.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ubuntu/normal14.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/ubuntu/bold14.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/ubuntu/italic14.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/ubuntu/bold_italic14.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/ubuntu/mono_normal14.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.0980392 )

[node name="game_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chat" type="Control" parent="."]
anchor_top = 0.722
anchor_right = 0.234
anchor_bottom = 1.0
margin_top = 0.239929
margin_right = 0.719971
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="chat"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messages" type="RichTextLabel" parent="chat/Container"]
margin_right = 450.0
margin_bottom = 276.0
focus_mode = 2
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 4 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
custom_constants/line_separation = -1
bbcode_enabled = true
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input" type="LineEdit" parent="chat/Container"]
margin_top = 276.0
margin_right = 450.0
margin_bottom = 300.0
[connection signal="meta_hover_ended" from="chat/Container/messages" to="chat/Container" method="_on_messages_meta_hover_ended"]
[connection signal="meta_hover_started" from="chat/Container/messages" to="chat/Container" method="_on_messages_meta_hover_started"]
[connection signal="mouse_entered" from="chat/Container/messages" to="chat/Container" method="_on_messages_mouse_entered"]
[connection signal="mouse_exited" from="chat/Container/messages" to="chat/Container" method="_on_messages_mouse_exited"]
[connection signal="text_entered" from="chat/Container/input" to="chat/Container" method="_on_input_text_entered"]
